--- a/Megu/megu.html
+++ b/Megu/megu.html
@@ -25,9 +25,9 @@
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV.js"></script>
-    <script type="text/javascript" src="shape.js"></script>
-    <script type="text/javascript" src="animate.js"></script>
-    <script type="text/javascript" src="draw.js"></script>
+    <script type="text/javascript" src="../Lib/shape.js"></script>
+    <script type="text/javascript" src="../Lib/animate.js"></script>
+    <script type="text/javascript" src="../Lib/draw.js"></script>
     <script type="text/javascript" src="megu.js"></script>
 	<style>
 		<!--body{width:100%;height:100%;}
