--- a/Megu/megumayuge.html
+++ b/Megu/megumayuge.html
@@ -25,8 +25,8 @@
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../Common/initShaders.js"></script>
     <script type="text/javascript" src="../Common/MV.js"></script>
-    <script type="text/javascript" src="shape.js"></script>
-    <script type="text/javascript" src="draw.js"></script>
+    <script type="text/javascript" src="../Lib/shape.js"></script>
+    <script type="text/javascript" src="../Lib/draw.js"></script>
     <script type="text/javascript" src="megumayuge.js"></script>
 </head>
 <body>
