--- a/Megu/index.html
+++ b/Megu/index.html
@@ -37,18 +37,18 @@
 		#actions>input{display:none;}
 		#actions>div{
 			display:inline-block;
-			height:2.5em;
-			width:6em;
+			height:2em;
+			width:5em;
 			font-size:28px;
 			cursor:pointer;
 			border:2px solid #AAA;
-			margin:-1px 0;
+			margin:2px 0;
 			padding:0 5px;
 		}
-		#actions>input[type="radio"]:checked+div{background-color:#0cF;padding:5px 0.5em;}
+		#actions>input[type="radio"]:checked+div{background-color:#0cF;padding:5px 1em 5px 0.5em;}
 		#actions>div>label{
 			font-family:"Microsoft Yahei";
-			line-height:2.5em;
+			line-height:2em;
 			cursor:pointer;
 		}
 	</style>
