--- a/Megu/index.html
+++ b/Megu/index.html
@@ -33,23 +33,29 @@
 	<style>
 		.all{position:absolute;top:1%;left:20%;width:60%;height:99%;}
 		#gl-canvas{display:block;height:100%;margin:0 auto;}
-		.left{position:absolute;left:0;top:30%;}
+		.left{position:absolute;left:0;top:10%;}
 		#actions>input{display:none;}
 		#actions>div{
 			display:inline-block;
 			height:2em;
-			width:5em;
+			width:8em;
 			font-size:28px;
 			cursor:pointer;
 			border:2px solid #AAA;
-			margin:2px 0;
+			margin:1px 0;
 			padding:0 5px;
 		}
-		#actions>input[type="radio"]:checked+div{background-color:#0cF;padding:5px 1em 5px 0.5em;}
+		#actions>input[type="radio"]:checked+div{background-color:#0cF;padding:5px 1em 5px 0.5em;font-size:30px;}
 		#actions>div>label{
 			font-family:"Microsoft Yahei";
 			line-height:2em;
 			cursor:pointer;
+			-webkit-touch-callout: none;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
 		}
 	</style>
 </head>
