--- a/Megu/index.html
+++ b/Megu/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>東雲めぐ</title>
+	<!--c-->
     <script id="vertex-shader" type="x-shader/x-vertex">
         attribute vec4 vPosition;
         attribute vec4 vColor;
         varying vec4 fColor;
-
+		
         void main()
         {
 			fColor = vColor;
@@ -28,7 +29,6 @@
     <script type="text/javascript" src="../Lib/shape.js"></script>
     <script type="text/javascript" src="../Lib/animate.js"></script>
     <script type="text/javascript" src="../Lib/draw.js"></script>
-    <!--<script type="text/javascript" src="action.js"></script>-->
     <script type="text/javascript" src="megu.js"></script>
 	<style>
 		.all{position:absolute;top:1%;left:20%;width:60%;height:99%;}
@@ -45,7 +45,7 @@
 			margin:1px 0;
 			padding:0 5px;
 		}
-		#actions>input[type="radio"]:checked+div{background-color:#0cF;padding:5px 1em 5px 0.5em;font-size:30px;}
+		#actions>input[type="radio"]:checked+div{background-color:#fde695;padding:5px 1em 5px 0.5em;font-size:30px;}
 		#actions>div>label{
 			font-family:"Microsoft Yahei";
 			line-height:2em;
@@ -58,6 +58,7 @@
 			user-select: none;
 		}
 	</style>
+	<!--ldftinud-->
 </head>
 <body>
 	<div class="all">
